syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//会员类型配置表
service Membership {
  //会员类型配置表-创建一条数据
  rpc CreateMembership(CreateMembershipReq) returns (CreateMembershipReply) {
    option (google.api.http) = {
      post: "/admin/v1/membership/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //会员类型配置表-更新一条数据
  rpc UpdateMembership(UpdateMembershipReq) returns (UpdateMembershipReply) {
    option (google.api.http) = {
      post: "/admin/v1/membership/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //会员类型配置表-更新状态
  rpc UpdateMembershipStatus(UpdateMembershipStatusReq) returns (UpdateMembershipStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/membership/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //会员类型配置表-删除一条数据
  rpc DeleteMembership(DeleteMembershipReq) returns (DeleteMembershipReply) {
    option (google.api.http) = {
      post: "/admin/v1/membership/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //会员类型配置表-单条数据查询
  rpc GetMembershipInfo(GetMembershipInfoReq) returns (GetMembershipInfoReply) {
    option (google.api.http) = {get: "/admin/v1/membership/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //会员类型配置表-列表数据查询
  rpc GetMembershipList(GetMembershipListReq) returns (GetMembershipListReply) {
    option (google.api.http) = {get: "/admin/v1/membership/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}

//会员类型配置表信息
message MembershipInfo {
  string id = 1; // id
  string name = 2; // 会员类型名称
  string type = 3; // 会员类型编码(normal,vip,svip)
  string description = 4; // 会员类型描述
  int32 sort = 5; // 排序
  int32 status = 6; // 状态(-1禁用,1启用)
  string createdAt = 7; // 创建时间
  string updatedAt = 8; // 更新时间
}

//请求-会员类型配置表-创建一条数据
message CreateMembershipReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "name",
        "type",
        "status"
      ]
    }
  };
  string name = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 会员类型名称
  string type = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 20
  }]; // 会员类型编码(normal,vip,svip)
  string description = 3 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
    }
  ]; // 会员类型描述
  int32 sort = 4 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 排序
  int32 status = 5; // 状态(-1禁用,1启用)
}

//响应-会员类型配置表-创建一条数据
message CreateMembershipReply {
  string id = 1; // id
}

//请求-会员类型配置表-更新一条数据
message UpdateMembershipReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "name",
        "type",
        "status"
      ]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 会员类型名称
  string type = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 20
  }]; // 会员类型编码(normal,vip,svip)
  string description = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
    }
  ]; // 会员类型描述
  int32 sort = 5 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 排序
  int32 status = 6; // 状态(-1禁用,1启用)
}

//响应-会员类型配置表-更新一条数据
message UpdateMembershipReply {}

//请求-会员类型配置表-更新状态
message UpdateMembershipStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "status"
      ]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  int32 status = 2; // 状态(-1禁用,1启用)
}

//响应-会员类型配置表-更新状态
message UpdateMembershipStatusReply {}

//请求-会员类型配置表-删除一条数据
message DeleteMembershipReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-会员类型配置表-删除一条数据
message DeleteMembershipReply {}

//请求-会员类型配置表-单条数据查询
message GetMembershipInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-会员类型配置表-单条数据查询
message GetMembershipInfoReply {
  MembershipInfo info = 1;
}

//请求-会员类型配置表-列表数据查询
message GetMembershipListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1 [(buf.validate.field).int32 = {gte: 1}]; //页码
  int32 pageSize = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 1000
  }]; //页数
  string name = 3; // 会员类型名称
  string type = 4; // 会员类型编码(normal,vip,svip)
  int32 status = 5; // 状态(-1禁用,1启用)
  repeated string createdAt = 6; // 创建时间
}

//响应-会员类型配置表-列表数据查询
message GetMembershipListReply {
  int32 total = 1; //总数
  repeated MembershipInfo list = 2; // 列表数据
}
